2007-11-24  Ulrich Mueller  <ulm@gentoo.org>

	* Makefile (DISTFILES): Add new files.

	* eselect-mode-keywords.el: Ditto.

	* ebuild-mode-keywords.el: New file, split off from
	gentoo-syntax.el.

	* gentoo-syntax.el: Move keyword lists to new files and load them.
	(ebuild-mode-keyword): Ask first for the action, then for the
	architecture. Suggestion by Flameeyes.

2007-11-17  Ulrich Mueller  <ulm@gentoo.org>

	* gentoo-syntax.el (ebuild-run-command): Bug fix, use
	ebuild-commands-list instead of alist.
	(ebuild-mode-keyword, ebuild-mode-ekeyword-complete)
	(ebuild-mode-ekeyword): New functions, rewritten user interface.
	(ebuild-mode-map): Keybindings adapted accordingly.
	(ebuild-mode-keyword-stable, ebuild-mode-keyword-unstable)
	(ebuild-mode-keyword-mask, ebuild-mode-keyword-drop):
	Functions removed.

2007-11-11  Ulrich Mueller  <ulm@gentoo.org>

	* gentoo-syntax.el (ebuild-mode-get-keywords)
	(ebuild-mode-put-keywords, ebuild-mode-sort-keywords)
	(ebuild-mode-modify-keywords, ebuild-mode-keyword-stable)
	(ebuild-mode-keyword-unstable, ebuild-mode-keyword-mask)
	(ebuild-mode-keyword-drop):
	New functions for package keyword modification.
	(ebuild-mode-arch-stable-list, ebuild-mode-arch-list)
	(ebuild-mode-keywords-regexp): New variables.
	(ebuild-mode-map): Keybindings for above.

2007-11-10  Ulrich Mueller  <ulm@gentoo.org>

	* gentoo-syntax.el (ebuild-mode): Set shell to bash.
	(eselect-mode): Ditto.
	(ebuild-commands-list): New variable, replaces previous alist.
	(ebuild-run-command): Use it.
	Add local variables block to declare utf-8 encoding.

2007-10-22  Ulrich Mueller  <ulm@gentoo.org>

	* gentoo-syntax.el (ebuild-mode-commands-common-lisp):
	Add common-lisp-symlink-asdf, which will obsolete
	common-lisp-system-symlink.

2007-10-11  Christian Faulhammer  <opfer@gentoo.org>

	* gentoo-syntax.el (ebuild-mode-commands-flag-o-matic): Added
	missing functions from marienz' ebuild-mode
	(ebuild-mode-commands-toolchain): Added missing functions from